--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,13 @@
 								LIFE</span> IN<br>
 							FOCUS
 						</h2>
-						<p class="parag1" style="color: #0b1b30;"> <Span style="color: #be694b;">
-								STUDIO, 1, 1 & FLEX, 2, 2 & FLEX<br>
-							</Span>IN LANGLEY CITY, MINUTES TO THE NEW SKYTRAIN</p>
-						<p style="font-size: 1.3em;font-family: 'Beliau';color: black;">
-							COMING SOON 2024
+						<p class="parag1" style="color: #0b1b30;"> <Span style="white-space: nowrap; color: #be694b;">
+								STUDIO, 1, 1 + FLEX, 2, 2 + FLEX<br>
+							</Span>
+							<Span style="white-space: nowrap;">IN LANGLEY CITY<br> MINUTES TO THE FUTURE SKYTRAIN</Span>
+						</p>
+						<p style="font-size: 1.3em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
+							PRESENTATION CENTER COMING SOON
 						</p>
 					</div>
 				</header>
@@ -137,9 +139,8 @@
 				<img src="images/icon-sec5.png" alt="Icon Center" class="icon-center">
 
 				<h3>A HOME WITH THE ESSENTIALS</h3>
-				<p class="about quiet3">Every building offers something different. At Scale by Scale
-					Projects it was about designing practical spaces versus
-					spaces that nobody would use.<br>
+				<p class="about quiet3">At Scale by Scale Projects it’s all about designing practical spaces that truly
+					serve their purpose.<br>
 				</p>
 			</div>
 		</section>
@@ -159,13 +160,11 @@
 			<div class="text-sec3">
 				<img src="images/icon-sec3.png" alt="Icon Center" class="icon-center">
 
-				<h3>A QUIET RESIDENTIAL COMMUNITY
-					WHERE UPSIDE HAS NO CEILING.</h3>
-				<p class="about quiet3">A neighbourhood with amenities just a few blocks away,
-					the future skytrain within walking distance and endless hidden
-					gems to discover in Langley's ever growing community. <br>
-					Located near 54A Avenue and 203 Street, be one of the first to invest in a
-					community that will transform before your eyes. Register Today! </p>
+				<h3>AT SCALE BALANCE IS A LIFESTYLE</h3>
+				<p class="about quiet3">Scale is situated in the rapidly expanding community of the City of Langley near
+					54A and 203 Street, boasting convenient amenities just a few blocks away, walking distance to future
+					skytrain and a plethora of hidden gems, including restaurants and stores, waiting to be discovered.
+				</p>
 			</div>
 		</section>
 
@@ -241,8 +240,8 @@
 			</div>
 			<div class="right-half section-nap-scroll">
 				<h4>REGISTER TODAY</h4>
-				<p class="parag3">Make Scale by Scale Projects in Langley your home. Register with our
-					team and we will contact you shortly to provide more infomation. </p>
+				<p class="parag3">Make Scale your new home and enjoy life in balance. Our sales team will reach out to
+					you soon with additional information. </p>
 
 				<form action="/api/enviar-formulario" method="post" class="par-form" id="form-contato">
 					<label for="fname">First name*</label>
@@ -259,7 +258,7 @@
 
 					<label for="city">City of residence*</label>
 					<input type="text" id="city" name="city" class="text-input" required>
-					<label for="hearAbout">Where did you hear about us:</label>
+					<label for="hearAbout">How did you hear about us?</label>
 					<select id="hearAbout" name="hearAbout" class="text-input" required>
 						<option class="text-input10" value=" "> </option>
 						<option class="text-input10" value="Livabl">Livabl</option>
@@ -325,7 +324,8 @@
 
 					</div>
 
-					<div style="display: flex;">
+					<div
+						style="display: flex;flex-direction: column;align-content: flex-start;align-items: flex-start;">
 
 						<button class="form-button g-recaptcha" data-sitekey="6Lc2tRspAAAAAMLNy6B2O23BagKcxv7DkrXMKrd5"
 							data-callback="onSubmit">Submit</button>
@@ -349,6 +349,10 @@
 
 							</h3> -->
 						</div>
+						<p class="textBelowSummit">Continue to visit our website in the upcoming weeks to get more
+							exciting updates on Scale.
+
+						</p>
 
 					</div>
 			</div>
@@ -454,22 +458,24 @@
 		<footer id="footer" class="section-nap-scroll">
 
 			<div class="side-l">
-				<div class="menu-footer">
-					<!-- <a href="#intro">PROJECTS</a> -->
-					<!-- <a href="#two">CONTACT</a>
-					<a href="#one">ABOUT</a> -->
-				</div>
-				<p class="updates"> <img src="images/i.png" alt="exclam" class="exclaim"> Continue to visit our website
-					as we add further
-					information and provide additional updates in the
-					upcoming weeks about our Scale project.</p>
+
+				<p class="adress">
+					live@scale.ca
+				</p>
 				<p class="privacy">
 					Copyright &copy; 2023 Scale Projects
-					<a href="javascript:void(0)"
-						style="margin-left: 10px; border-bottom: solid 1px;white-space: nowrap;"
+					<a href="javascript:void(0)" style="margin-left: 10px; border-bottom: solid 1px;"
 						onclick="openPrivacyModal2()">Privacy
 						Policy</a>
 				</p>
+				<p class="disclaimer">This is not an offering for sale. Any such offering must be made by way of
+					disclosure statement. In
+					our continuing effort to improve and maintain the high standard of the Scale development, the
+					developer reserves the right to modify or change plans, specifications, features and prices without
+					notice. Materials may be substituted with equivalent or better at the developer’s sole discretion.
+					All dimensions and sizes are approximate and are based on architectural measurements. Rendering are
+					an artists conception and are intended as a general reference only. E &O.E. Sales and Marketing
+					provided by Fifth Avenue Real Estate Marketing Ltd. 604-583-2212</p>
 
 				<div id="privacy-modal2">
 					<span id="close-modal" onclick="closePrivacyModal2()">&times;</span>
@@ -500,61 +506,14 @@
 				</div>
 			</div>
 
-			<div class="side-center">
-				<div class="bl-dow">
-					<h6 class="BALANCE">BALANCE</h6>
-					<h3 class="lifestyle lst">
-						<span
-							style="font-family: 'AddingtonCF-DemiBoldItalic'; font-size: 0.6em;word-spacing: 0.29em;">is
-							a </span> lifestyle
-					</h3>
-				</div>
-				<div>
-					<a href="https://fifthave.ca/"><img src="images/Fifth-Ave.png" alt="FIFTH AVU"
-							class="logo-fifth"></a>
-				</div>
-			</div>
-
-
 
 			<div class="side-r">
-				<!-- <img src="images/logo.png" alt="Logo 1" class="logo logodown"> -->
-
-
-				<!-- <ul class="icons">
-
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-youtube-in"><span class="label">YouTube</span></a></li>
-
-				</ul> -->
-
-
-				<!-- <div class="container-icons">
-					<a href="#" target="_blank">
-						<img src="images/icon_fb.png" alt="IconFB">
-					</a>
-
-					<a href="#" target="_blank">
-						<img src="images/icon_inst.png" alt="IconInsta">
-					</a>
-
-					<a href="#" target="_blank">
-						<img src="images/icon_yt.png" alt="IconYT">
-					</a>
-				</div> -->
-
-
-				<p class="adress">
-					Presentation Centre Coming Soon!
-					<!-- <span style="color: #ffffff;">
-					</span><br><br>
-
-					live@scalegroup.ca -->
-				</p>
-				<a href="#intro"><img src="images/logo2.png" alt="logo2" class="logo2down"></a>
-
-
+				<a href="https://fifthave.ca/">
+					<img src="images/Fifth-Ave.png" alt="FIFTH AVU" class="logo-fifth">
+				</a>
+				<a href="#intro">
+					<img src="images/logo2.png" alt="logo2" class="logo2down">
+				</a>
 			</div>
 
 		</footer>
