--- a/public/scali.html
+++ b/public/scali.html
@@ -137,24 +137,23 @@
             <div id="menu">
                 <h3 class="location">
                     LOCATION</h3>
-                <a href=" #"
-                    onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALE_MAP_FULL.jpg');">NEIGHBOURHOOD</a>
+                <a href=" #" onclick="return showImage(this, 'images/Layers JPEG-PNG/FULL_MAP.jpg');">NEIGHBOURHOOD</a>
                 <a class="" href="#"
-                    onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_06_RESTAURANTES.png');">RESTAURANTS</a>
+                    onclick="return showImage(this, 'images/Layers JPEG-PNG/RESTAURANTS.png');">RESTAURANTS</a>
+                <a href="#" onclick="return showImage(this, 'images/Layers JPEG-PNG/PARKS.png');">PARKS</a>
+                <a href="#" onclick="return showImage(this, 'images/Layers JPEG-PNG/SUPERMARKET.png');">SUPERMARKETS</a>
+                <a href="#" onclick="return showImage(this, 'images/Layers JPEG-PNG/MALLS.png');">MALLS</a>
+                <a href="#" onclick="return showImage(this, 'images/Layers JPEG-PNG/DEPARTMENT_STORES.png');">DEPARTMENT
+                    STORES</a>
                 <a href="#"
-                    onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_01_PARQUES_ICON.png');">PARKS</a>
+                    onclick="return showImage(this, 'images/Layers JPEG-PNG/ENTERTAINMENT.png');">ENTERTAINMENT</a>
+                <a href="#" onclick="return showImage(this, 'images/Layers JPEG-PNG/EDUCATION.png');">EDUCATION</a>
                 <a href="#"
-                    onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_07_OUTROS.png');">SERVICES</a>
-                <a href="#"
-                    onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_04_COMERCIO.png');">SUPERMARKETS</a>
-                <a href="#"
-                    onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_05_LAZER.png');">ENTERTAINMENT</a>
-                <a href="#"
-                    onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_02_SKYTRAIN.png');">STATIONS</a>
+                    onclick="return showImage(this, 'images/Layers JPEG-PNG/TRANSPORTATION.png');">TRANSPORTATION</a>
             </div>
             <div id="content4">
                 <img id="baseImage" src="images/Layers JPEG-PNG/SCALI_MAP_01_BASE_ICON.png" alt="Base Image">
-                <img id="overlayImage" src="images/Layers JPEG-PNG/SCALE_MAP_FULL.jpg" alt="Overlay Image">
+                <img id="overlayImage" src="images/Layers JPEG-PNG/FULL_MAP.jpg" alt="Overlay Image">
             </div>
         </section>
 
