--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 							</Span>
 							<Span style="white-space: nowrap;">IN LANGLEY CITY<br> MINUTES TO THE FUTURE SKYTRAIN</Span>
 						</p>
-						<p style="font-size: 1.3em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
+						<p style="font-size: 1em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
 							PRESENTATION CENTER COMING SOON
 						</p>
 					</div>
@@ -293,7 +293,8 @@
 						<label for="checkbox-phone" style="padding-right: 1em;padding-left: 0.3em;">Phone</label>
 
 						<input type="checkbox" id="email" name="contact-method" value="E-mail">
-						<label for="email" style="width: 6em; padding-right: 1em;padding-left: 0.3em;">E-mail</label>
+						<label for="email"
+							style="width: 6em; padding-right: 1em;padding-left: 0.3em;white-space: nowrap;">E-mail</label>
 
 						<input type="checkbox" id="text" name="contact-method" value="Text">
 						<label for="text" style="padding-right: 1em;padding-left: 0.3em;">Text</label>
