--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 							<Span style="white-space: nowrap;">IN LANGLEY CITY<br> MINUTES TO THE FUTURE SKYTRAIN</Span>
 						</p>
 						<p style="font-size: 1em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
-							PRESENTATION CENTER COMING SOON
+							PRESENTATION CENTER <span style="color: #be694b;"> COMING SOON </span>
 						</p>
 					</div>
 				</header>
@@ -138,7 +138,7 @@
 			<div class="text-sec3">
 				<img src="images/icon-sec5.png" alt="Icon Center" class="icon-center">
 
-				<h3>A HOME WITH THE ESSENTIALS</h3>
+				<h3 class="whiteSpace">A HOME WITH THE ESSENTIALS</h3>
 				<p class="about quiet3">At Scale by Scale Projects it’s all about designing practical spaces that truly
 					serve their purpose.<br>
 				</p>
@@ -326,7 +326,7 @@
 					</div>
 
 					<div
-						style="display: flex;flex-direction: column;align-content: flex-start;align-items: flex-start;">
+						style="display: flex;flex-direction: row;align-content: center;align-items: center;flex-wrap: nowrap;justify-content: space-between;">
 
 						<button class="form-button g-recaptcha" data-sitekey="6Lc2tRspAAAAAMLNy6B2O23BagKcxv7DkrXMKrd5"
 							data-callback="onSubmit">Submit</button>
@@ -352,8 +352,11 @@
 						</div>
 						<p class="textBelowSummit">Continue to visit our website in the upcoming weeks to get more
 							exciting updates on Scale.
-
 						</p>
+
+
+
+
 
 					</div>
 			</div>
