--- a/public/index.html
+++ b/public/index.html
@@ -464,7 +464,7 @@
 			<div class="side-l">
 
 				<p class="adress">
-					live@scale.ca
+					homes@scaleliving.ca
 				</p>
 				<p class="privacy">
 					Copyright &copy; 2023 Scale Projects
