--- a/public/index.html
+++ b/public/index.html
@@ -307,7 +307,7 @@
 								I consent to receiving electronic messages from Scale Projects and Fifth Avenue Real
 								Estate Marketing Ltd. with updates on Scale and other projects that may be of interest
 								to me. If you wish to stop receiving this information at any time, simply check
-								unsubscribe at the bottom of any email received or contact live@scale.ca with
+								unsubscribe at the bottom of any email received or contact homes@scaleliving.ca with
 								unsubscribe in the subject line.</label>
 						</div>
 						<!-- <div class="Checkboxers">
