--- a/public/scali.html
+++ b/public/scali.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scale</title>
-    <link rel="stylesheet" href="assets/css/main1.css" />
-    <link rel="stylesheet" href="assets/css/responsive1.css" />
+    <link rel="stylesheet" href="assets/css/fullpage.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/S-favIcon.png">
     <noscript>
@@ -14,53 +13,29 @@
     </noscript>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
-<style>
-    header {
-        transition: background-color 0.9s ease;
-        z-index: 1000;
-    }
-
-    header img {
-        max-width: 100px;
-        height: auto;
-    }
-</style>
 
 <body class="is-preload">
-
     <header id="header1">
-        <div style="display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
-		align-items: center;
-		width: 21%;">
-
+        <div class="menu-wrapper">
             <a href="#intro">
-                <img src="images/Scale1.png" alt="Logo Scale" class="logo2" />
+                <img src="images/Scale1.png" alt="Logo Scale" class="logo-img" />
             </a>
-            <nav>
-                <ul>
-                    <li><a href="#four">PROJECTS</a></li>
-                    <li><a href="#four">NEIGHBOURHOOD</a></li>
 
-                </ul>
+            <nav class="nav-wrapper">
+                <a href="#four">PROJECTS</a>
+                <a href="#four">NEIGHBOURHOOD</a>
             </nav>
         </div>
-        <div class="header-logo-r"
-            style="display: flex;flex-direction: row;justify-content: flex-start;align-items: center;width: 21%;">
+        
+        <div class="register-wrapper">
             <img src="images/S.png" alt="Logo 1" class="logo" />
             <a href="#nine">
                 <button class="button">REGISTER</button>
             </a>
-
-
         </div>
-
     </header>
 
     <div class="main-content">
-
-
         <section id="intro" class="main style1 dark fullscreen section-nap-scroll">
             <div class="content ">
                 <header>
@@ -119,13 +94,11 @@
             <div class="text-sec3">
                 <img src="images/icon-sec3.png" alt="Icon Center" class="icon-center">
 
-                <h3>A QUIET RESIDENTIAL COMMUNITY
-                    WHERE UPSIDE HAS NO CEILING.</h3>
-                <p class="about quiet3">A neighbourhood with amenities just a few blocks away,
-                    the future skytrain within walking distance and endless hidden
-                    gems to discover in Langley's ever growing community. <br>
-                    Located near 54A Avenue and 203 Street, be one of the first to invest in a
-                    community that will transform before your eyes. Register Today! </p>
+                <h3>AT SCALE BALANCE IS A LIFESTYLE</h3>
+                <p class="about quiet3">Scale is situated in the rapidly expanding community of the City of Langley near
+                    54A and 203 Street, boasting convenient amenities just a few blocks away, walking distance to future
+                    skytrain and a plethora of hidden gems, including restaurants and stores, waiting to be discovered.
+                </p>
             </div>
         </section>
 
@@ -248,8 +221,8 @@
             </div>
             <div class="right-half section-nap-scroll">
                 <h4>REGISTER TODAY</h4>
-                <p class="parag3">Make Scale by Scale Projects in Langley your home. Register with our
-                    team and we will contact you shortly to provide more infomation. </p>
+                <p class="parag3">Make Scale your new home and enjoy life in balance. Our sales team will reach out to
+                    you soon with additional information.</p>
 
                 <form action="/api/enviar-formulario" method="post" class="par-form" id="form-contato">
                     <label for="fname">First name*</label>
@@ -266,7 +239,7 @@
 
                     <label for="city">City of residence*</label>
                     <input type="text" id="city" name="city" class="text-input" required>
-                    <label for="hearAbout">Where did you hear about us:</label>
+                    <label for="hearAbout">How did you hear about us?</label>
                     <select id="hearAbout" name="hearAbout" class="text-input" required>
                         <option class="text-input10" value=" "> </option>
                         <option class="text-input10" value="Livabl">Livabl</option>
@@ -474,6 +447,14 @@
                         Policy</a>
                 </p>
 
+                <p class="disclaimer">This is not an offering for sale. Any such offering must be made by way of
+                    disclosure statement. In
+                    our continuing effort to improve and maintain the high standard of the Scale development, the
+                    developer reserves the right to modify or change plans, specifications, features and prices without
+                    notice. Materials may be substituted with equivalent or better at the developer's sole discretion.
+                    All dimensions and sizes are approximate and are based on architectural measurements. Rendering are
+                    an artists conception and are intended as a general reference only. E &O.E. Sales and Marketing
+                    provided by Fifth Avenue Real Estate Marketing Ltd. 604-583-2212</p>
                 <div id="privacy-modal2">
                     <span id="close-modal" onclick="closePrivacyModal2()">&times;</span>
                     <h2 style="font-size: 0.8em; letter-spacing: 0.1em; font-family: 'Brinnan-Bold';">Privacy Policy:
