--- a/public/index.html
+++ b/public/index.html
@@ -77,81 +77,20 @@
 			">More</a>
 		</section>
 
-		<!-- <section id="one" class="main style2 right dark fullscreen section-nap-scroll">
-			<div class=" box style2">
-				<p class="about">Life is a delightful, unpredictable rollercoaster.<br>
-					It’s those days when you’re rushing to work, and you spill coffee on your
-					brand-new shirt. Or when you hit “reply all” by mistake in a company email.<br>
-					But guess what?<br>
-					At the end of the day, you will be back home.<br>
-					You’ll be back to your sanctuary of laughter, warmth, and absolute safety.<br>
-					You return home after a day that felt like a never-ending sitcom of mishaps.<br>
-					Maybe you accidentally left your umbrella on the train, and the rain got the
-					best of you. But as you step through your front door, that incredible feeling
-					of relief washes over you.<br>
-					Your home is your haven, where the mishaps of the day melt away into jokes
-					you’ll laugh about later.<br></p>
-				<a href="#tree">
-					<button class=" register">REGISTER NOW</button>
-				</a>
-			</div>
-		</section> -->
 
-		<!-- <section id="two" class="main mainMobile left dark fullscreen style2 section-nap-scroll">
-
-			<img src="images/S.png" alt="Imagem S" class="s-sec2">
-			<div class="text-logo">YOUR LIFE <span style="font-family: 'Brinnan-Light';
-			 color: #f6f6f6;">
-					IN FOCUS. </span>
-			</div>
-		</section> -->
-
-
-
-
-
-		<!-- <section id="four" class="main  right dark fullscreen split-section-horizon section-nap-scroll">
-			<div id="menu">
-				<h3 style="margin-bottom: 1em; color: #263239; margin-left: 0; text-align: left;">LOCATION</h3>
-				<a href=" #"
-					onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_03_SCALE_ICON.png');">MALLS</a>
-				<a href="#"
-					onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_06_RESTAURANTES.png');">RESTAURANTS</a>
-				<a href="#"
-					onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_01_PARQUES.jpg');">PARKS</a>
-				<a href="#"
-					onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_07_OUTROS.png');">SERVICES</a>
-				<a href="#"
-					onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_04_COMERCIO.png');">SUPERMARKETS</a>
-				<a href="#"
-					onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_05_LAZER.png');">ENTERTAINMENT</a>
-				<a href="#"
-					onclick="return showImage(this, 'images/Layers JPEG-PNG/SCALI_MAP_02_SKYTRAIN.png');">STATIONS</a>
-			</div>
-			<div id="content4">
-				<img id="baseImage" src="images/Layers JPEG-PNG/SCALI_MAP_01_BASE.jpg" alt="Base Image">
-				<img id="overlayImage" src="images/Layers JPEG-PNG/SCALE_MAP_FULL.jpg" alt="Overlay Image">
-			</div>
-		</section> -->
 
 		<section id="five" class="main  right dark section-nap-scroll">
 			<div class="text-sec3">
 				<img src="images/icon-sec5.png" alt="Icon Center" class="icon-center">
 
-				<h3 class="whiteSpace">A HOME WITH THE ESSENTIALS</h3>
-				<p class="about quiet3">At Scale by Scale Projects it’s all about designing practical spaces that truly
-					serve their purpose.<br>
+				<h3>A HOME WITH THE ESSENTIALS</h3>
+				<p class="about quiet3">Scale by Scale Projects is thoughtfully designed for those who appreciate
+					balance, offering essential amenities needed for an elevated way of life.<br>
 				</p>
 			</div>
 		</section>
 
-		<!-- <section id="six" class="main  right dark fullscreen section-nap-scroll">
-			<img src="images/SCALI_01_Hero_Streetscape.jpg" alt="Streetscape" class="Streetscape_image">
-			<h3 class="amenities">ENJOY OUR AMENITIES
-				<img src="images/amenities.png" alt="Amenities" class="amenities">
-			</h3>
-			<img src="images/scale-sec6.png" alt="scale-sec6" class="scale-sec6">
-		</section> -->
+
 		<section id="six" class="main style1 dark fullscreen section-nap-scroll">
 
 		</section>
@@ -160,82 +99,19 @@
 			<div class="text-sec3">
 				<img src="images/icon-sec3.png" alt="Icon Center" class="icon-center">
 
-				<h3>AT SCALE BALANCE IS A LIFESTYLE</h3>
-				<p class="about quiet3">Scale is situated in the rapidly expanding community of the City of Langley near
-					54A and 203 Street, boasting convenient amenities just a few blocks away, walking distance to future
-					skytrain and a plethora of hidden gems, including restaurants and stores, waiting to be discovered.
+				<h3>BALANCE IS A LIFESTYLE</h3>
+				<p class="about quiet3">Situated in the rapidly expanding City of Langley near 54A and 203 Street, Scale
+					is located in close walking distance to future Skytrain, and a plethora of hidden gems including
+					restaurants, shops, and other unique amenities waiting to be discovered.
 				</p>
 			</div>
 		</section>
 
 
-		<!-- <section id="seven" class="main  right dark fullscreen section-nap-scroll">
-			<img src="images/S.png" alt="Imagem S" class="s-sec2">
-			<div class="text-logo">YOUR LIFE <span style="font-family: 'Brinnan-Light';
-			 color: #f6f6f6;">
-					IN FOCUS. </span>
-			</div>
-			<div class="left-section7"></div>
-			<div class="right-section7">
-				<p class="about quiet4">Whether you're leaving for a
-					weekend trip or coming home
-					from Disneyland, home is the
-					comfort of your soul.</p>
-				<img src="images/bags_family.png" alt="bags_family" class="bags_family">
-				<button class="button7">REGISTER TODAY</button>
-			</div>
-		</section> -->
-
-		<!-- <section id="eight" class="main  right dark fullscreen section-nap-scroll">
-			<img src="images/S.png" alt="Imagem S" class="s-sec8">
-			<div class="text-logo8">YOUR LIFE <span style="font-family: 'Brinnan-Light';
-			 color: #f6f6f6;">
-					IN FOCUS. </span>
-
-				
-
-				<div class="slideshow-container">
-
-					<div class="mySlides fade">
-						<div class="numbertext">1 / 3</div>
-						<img src="images/SCALI_ST1_13_Vignette_A_GIFT_R1.jpg" style="width:100%">
-						<div class="text">Caption Text</div>
-					</div>
-
-					<div class="mySlides fade">
-						<div class="numbertext">2 / 3</div>
-						<img src="images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg" style="width:100%">
-						<div class="text">Caption Two</div>
-					</div>
-
-					<div class="mySlides fade">
-						<div class="numbertext">3 / 3</div>
-						<img src="images/SCALI_ST1_15_Vignette_C_GIFT_R1.jpg" style="width:100%">
-						<div class="text">Caption Three</div>
-					</div>
-
-					<a class="prev" onclick="plusSlides(-1)">❮</a>
-					<a class="next" onclick="plusSlides(1)">❯</a>
-
-				</div>
-				<br>
-
-				<div style="text-align:center">
-					<span class="dot" onclick="currentSlide(1)"></span>
-					<span class="dot" onclick="currentSlide(2)"></span>
-					<span class="dot" onclick="currentSlide(3)"></span>
-				</div>
-
-
-
-
-
-		</section> -->
 
 		<section id="nine" class="main  right dark fullscreen split-section ">
 
-
-			<div class="left-half">
+			<div class="left-half ">
 
 			</div>
 			<div class="right-half section-nap-scroll">
@@ -310,18 +186,6 @@
 								unsubscribe at the bottom of any email received or contact homes@scaleliving.ca with
 								unsubscribe in the subject line.</label>
 						</div>
-						<!-- <div class="Checkboxers">
-							<input type="checkbox" id="termsCheckbox" name="agreeToTerms" value="yes">
-							<label for="termsCheckbox" style="padding-left: 0.3em; flex: 1;">I agree to the terms: The
-								information you provide will be kept confidential and used only by Fifth Avenue Real
-								Estate Marketing to enhance your home buying experience and the level of service you
-								receive. The members of our Sales Team are all licensed Real Estate Professionals with
-								Fifth Avenue Real Estate Marketing and therefore are unable to provide representation to
-								potential buyers. To learn more about various forms of Realtor representation and the
-								choices available to you, please <a href="javascript:void(0)">click here.</a></label>
-						</div> -->
-
-
 
 					</div>
 
@@ -332,23 +196,7 @@
 							data-callback="onSubmit">Submit</button>
 
 						<div id="check-modal">
-							<!-- <img src="images/CheckGree.png" alt="OK-Check" class="OK-Check" /> -->
-							<!-- <h3 style="
-								font-family: 'Brinnan-Light';
-								font-size: 1.1em;
-								margin-bottom: 1rem;
-								font-weight: lighter;
-								text-align: justify;
-								margin: 1%;
-								line-height: normal;
-							">
-								Thank you for your interest in scale by Scale Projects. One of our Sales
-								Representatives
-								will be in touch shortly to discuss your how Scale can be your perfect home for
-								every
-								day comfort.
 
-							</h3> -->
 						</div>
 						<p class="textBelowSummit">Continue to visit our website in the upcoming weeks to get more
 							exciting updates on Scale.
@@ -382,82 +230,7 @@
 		</section>
 
 
-		<!-- <section id="ten" class="main  right dark section-nap-scroll">
-			<div class="alin10">
-				<div>
-					<p class="text10">
-						LIFE IS REAL, AND SO
-						ARE SCALE PROJECTS<br>
-						<span style="color: white;">
-							REAL PROJECTS
-							FOR REAL PEOPLE.
-						</span>
-						<button type="button" class="dev-button">
-							MORE ABOUT THE DEVELOPER</button>
-					</p>
-				</div>
-				<div>
-					<p class="blue-text">
-						At Scale Projects, we are dedicated to developing and
-						constructing inclusive communities that foster a
-						sense of belonging among real people. By prioritising
-						collaborative designs and sustainable infrastructure,
-						we aim to create vibrant neighbourhoods that support
-						the needs and aspirations of our residents. And, we do
-						this all in-house, from conception to completion.
-					</p>
-				</div>
-			</div>
-		</section> -->
 
-		<!-- <section id="eleven" class="main  right dark fullscreen section-nap-scroll">
-			<div class="left-section11">
-				<p class="tale11">
-					<span style="color: #5a7b9c;">
-						THE TALE
-					</span>
-					<span style="color: #93bad2;">
-						OF </span>
-					<span style="color: #79878d;">
-						SCALE
-				</p>
-				</span>
-			</div>
-			<div class="right-section11">
-				<p class="mega-text">
-					In a town where life often went awry,
-					Lived Harp and Raj, with dreams to reach the sky.
-					They saw a neighborhood, in need of some flair,
-					A place out of balance, in need of repair.
-					Harp, the dreamer, with visions so grand,
-					Raj, the builder, with tools in his hand.
-					Together they worked, their hearts in full sail,
-					Creating a building, a wonder named “Scale.”
-					Scale rose from the earth, its presence so grand,
-					A beacon of balance, throughout the land.
-					With rooftop gardens and windows that gleamed,
-					It fulfilled the neighborhood’s dreams.
-					But it wasn’t just bricks, wood, and rail,
-					It was the love and the laughter that set the sail.
-					Neighbors came together, their spirits set free,
-					In Scale’s embrace, they found unity.
-					Harp and Raj’s creation, both clever and cool,
-					Inspired the people to break every rule.
-					They learned to find balance in all they would do,
-					Living their best versions, their dreams coming true.
-					The lessons of Harp and of Raj, let them prevail,
-					To live in balance, to set their own trail.
-					With dreams in their hearts and stars in their sight,
-					They lived life in balance, both day and night.
-					So, close your eyes now, let your dreams take scale,
-					Find your own balance, let your spirit prevail.
-					In the story of Harp and of Raj, heed the call,
-					To live your best version, and stand tall.
-					Goodnight, dear dreamer, under moonlight’s soft veil,
-					May you find your own balance, and always set sail
-				</p>
-			</div>
-		</section> -->
 
 		<footer id="footer" class="section-nap-scroll">
 
@@ -524,12 +297,7 @@
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
-		<!-- <script src="assets/js/jquery.poptrox.min.js"></script> -->
-		<!-- <script src="assets/js/jquery.scrolly.min.js"></script> -->
-		<!-- <script src="assets/js/jquery.scrollex.min.js"></script> -->
-		<!-- <script src="assets/js/browser.min.js"></script> -->
 		<script src="assets/js/breakpoints.min.js"></script>
-		<!-- <script src="assets/js/util.js"></script> -->
 		<script src="assets/js/main.js"></script>
 	</div>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
