refactor: Ajustes de tamanho

--- a/public/scali.html
+++ b/public/scali.html
@@ -26,7 +26,7 @@
                 <a href="#four">NEIGHBOURHOOD</a>
             </nav>
         </div>
-        
+
         <div class="register-wrapper">
             <img src="images/S.png" alt="Logo 1" class="logo" />
             <a href="#nine">
@@ -40,15 +40,20 @@
             <div class="content ">
                 <header>
                     <div class="text_sec1">
-                        <h2 class="title-intro"><span style="color: #be694b;">YOUR<br>
+                        <h2 class="title-intro"><span style="color: #be694b;">
+                                YOUR<br>
                                 LIFE</span> IN<br>
                             FOCUS
                         </h2>
-                        <p class="parag1" style="color: #0b1b30;"> <Span style="color: #be694b;">
-                                STUDIO, 1, 1 & FLEX, 2, 2 & FLEX<br>
-                            </Span>IN LANGLEY CITY, MINUTES TO THE NEW SKYTRAIN</p>
-                        <p class="coming">
-                            COMING SOON 2024
+                        <p class="parag1" style="color: #0b1b30;;">
+                            <span style="color: #be694b;">
+                                STUDIO, 1, 1 & FLEX, 2, 2 + FLEX<br>
+                            </span>
+                            IN LANGLEY CITY,<br>
+                            MINUTES TO THE NEW SKYTRAIN
+                        </p>
+                        <p style="font-size: 1em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
+                            PRESENTATION CENTER <span style="color: #be694b;"> COMING SOON </span>
                         </p>
                     </div>
                 </header>
@@ -61,22 +66,23 @@
 
         <section id="one" class="main style2 right dark fullscreen section-nap-scroll">
             <div class=" box style2">
-                <p class="about">Life is a delightful, unpredictable rollercoaster.<br>
-                    It’s those days when you’re rushing to work, and you spill coffee on your
-                    brand-new shirt. Or when you hit “reply all” by mistake in a company email.<br>
-                    But guess what?<br>
-                    At the end of the day, you will be back home.<br>
-                    You’ll be back to your sanctuary of laughter, warmth, and absolute safety.<br>
-                    You return home after a day that felt like a never-ending sitcom of mishaps.<br>
-                    Maybe you accidentally left your umbrella on the train, and the rain got the
-                    best of you. But as you step through your front door, that incredible feeling
-                    of relief washes over you.<br>
-                    Your home is your haven, where the mishaps of the day melt away into jokes
-                    you’ll laugh about later.<br></p>
-                <a href="#nine">
-                    <button class=" register">REGISTER NOW</button>
-                </a>
-            </div>
+                <div class="about">
+                    <p>Life is a delightful, unpredictable rollercoaster.</p>
+                    <p>It’s those days when you’re rushing to work, and you spill coffee on your
+                        brand-new shirt. Or when you hit “reply all” by mistake in a company email.</p>
+                    <p>But guess what?</p>
+                    <p>At the end of the day, you will be back home.</p>
+                    <p>You’ll be back to your sanctuary of laughter, warmth, and absolute safety.</p>
+                    <p>You return home after a day that felt like a never-ending sitcom of mishaps.</p>
+                    <p>Maybe you accidentally left your umbrella on the train, and the rain got the
+                        best of you. But as you step through your front door, that incredible feeling
+                        of relief washes over you.</p>
+                    <p>Your home is your haven, where the mishaps of the day melt away into jokes
+                        you’ll laugh about later.</p>
+                    <a href="#nine">
+                        <button class=" register">REGISTER NOW</button>
+                    </a>
+                </div>
         </section>
 
         <section id="two" class="main mainMobile left dark fullscreen style2 section-nap-scroll">
@@ -88,23 +94,18 @@
             </div>
         </section>
 
-
-
         <section id="tree" class="main right dark section-nap-scroll">
             <div class="text-sec3">
                 <img src="images/icon-sec3.png" alt="Icon Center" class="icon-center">
 
-                <h3>AT SCALE BALANCE IS A LIFESTYLE</h3>
-                <p class="about quiet3">Scale is situated in the rapidly expanding community of the City of Langley near
-                    54A and 203 Street, boasting convenient amenities just a few blocks away, walking distance to future
-                    skytrain and a plethora of hidden gems, including restaurants and stores, waiting to be discovered.
+                <h3>BALANCE IS A LIFESTYLE</h3>
+                <p class="about quiet3">
+                    Situated in the rapidly expanding City of Langley near 54A and 203 Street, Scale is located in close
+                    walking distance to future Skytrain, and a plethora of hidden gems including restaurants, shops, and
+                    other unique amenities waiting to be discovered.
                 </p>
             </div>
         </section>
-
-
-
-
 
         <section id="four" class="main  right dark fullscreen split-section-horizon section-nap-scroll">
             <div id="menu">
@@ -135,23 +136,21 @@
                 <img src="images/icon-sec5.png" alt="Icon Center" class="icon-center">
 
                 <h3>A HOME WITH THE ESSENTIALS</h3>
-                <p class="about quiet3">Every building offers something different. At Scale by Scale
-                    Projects it was about designing practical spaces versus
-                    spaces that nobody would use.<br>
+                <p class="about quiet3">
+                    Scale by Scale Projects is thoughtfully designed for those who appreciate balance, offering
+                    essential amenities needed for an elevated way of life.
                 </p>
             </div>
         </section>
 
         <section id="six" class="main  right dark fullscreen section-nap-scroll">
+            <img src="images/scale-sec6.png" class="amenities-logo">
             <img src="images/SCALI_01_Hero_Streetscape.jpg" alt="Streetscape" class="Streetscape_image">
             <h3 class="amenities">
                 <div class="textAmenitties">ENJOY OUR AMENITIES</div>
-                <img src="images/amenities.png" alt="Amenities" class="amenities">
+                <img src="images/amenities.png" alt="Amenities" width="100%">
             </h3>
-            <img src="images/scale-sec6.png" alt="scale-sec6" class="scale-sec6">
         </section>
-
-
 
         <section id="seven" class="main  right dark fullscreen section-nap-scroll">
             <img src="images/S.png" alt="Imagem S" class="s-sec2">
@@ -167,17 +166,17 @@
                     comfort of your soul.</p>
                 <img src="images/bags_family.png" alt="bags_family" class="bags_family">
                 <a href="#nine">
-                    <button class="button7">REGISTER TODAY</button></a>
+                    <button class="button style2">REGISTER TODAY</button></a>
             </div>
         </section>
 
         <section id="eight" class="main  right dark fullscreen section-nap-scroll">
             <div class="carrosel">
-
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/SCALI_ST1_15_Vignette_C_GIFT_R1.jpg" alt="Image 1">
+                            <img class="d-block w-100" src="images/SCALI_ST1_15_Vignette_C_GIFT_R1.jpg" alt="Image 1"
+                                style="object-position: bottom center;">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg" alt="Image 2">
@@ -195,22 +194,15 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
-
-                <!-- Logo no canto inferior direito -->
-                <img src="images/S.png" alt="Imagem S" class="s-sec8">
-                <div class="text-logo8">YOUR LIFE <span style="font-family: 'Brinnan-Light'; color: #f6f6f6;"> IN FOCUS.
-                    </span></div>
-
             </div>
 
-
-
-
-
-
-
-
-
+            <!-- Logo no canto inferior direito -->
+            <div class="your-life-in-focus">
+                <img src="images/S.png" alt="Imagem S">
+                <div>
+                    YOUR LIFE <span> IN FOCUS.</span>
+                </div>
+            </div>
         </section>
 
         <section id="nine" class="main  right dark fullscreen split-section ">
@@ -225,20 +217,29 @@
                     you soon with additional information.</p>
 
                 <form action="/api/enviar-formulario" method="post" class="par-form" id="form-contato">
-                    <label for="fname">First name*</label>
-                    <input type="text" id="fname" name="fname" class="text-input" required>
+                    <div class="par-form-field">
+                        <label for="fname">First name*</label>
+                        <input type="text" id="fname" name="fname" class="text-input" required>
+                    </div>
 
-                    <label for="lname">Last name*</label>
+                    <div class="par-form-field">
+                        <label for="lname">Last name*</label>
                     <input type="text" id="lname" name="lname" class="text-input" required>
+                </div>
 
-                    <label for="email">E-mail*</label>
+                    <div class="par-form-field">
+                        <label for="email">E-mail*</label>
                     <input type="email" id="email" name="email" class="text-input" required>
+                </div>
 
-                    <label for="phone">Phone*</label>
+                    <div class="par-form-field">
+                        <label for="phone">Phone*</label>
                     <input type="tel" id="phone" name="phone" class="text-input" required>
+                </div>
 
                     <label for="city">City of residence*</label>
                     <input type="text" id="city" name="city" class="text-input" required>
+
                     <label for="hearAbout">How did you hear about us?</label>
                     <select id="hearAbout" name="hearAbout" class="text-input" required>
                         <option class="text-input10" value=" "> </option>
@@ -265,20 +266,20 @@
                         <label for="noRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">NO</label>
                     </div>
 
-
                     <div class="div-flex text-input">
-                        <label for="contact-method" style="padding-right: 1em; font-weight: bold; font-size: 0.95em;">
+                        <label for="contact-method" style="padding-right: 1em; font-weight: bold; font-size: 0.95em; white-space: nowrap;">
                             HOW WOULD YOU LIKE TO BE CONTACTED?</label>
 
                         <input type="checkbox" id="checkbox-phone" name="contact-method" value="Phone">
                         <label for="checkbox-phone" style="padding-right: 1em;padding-left: 0.3em;">Phone</label>
 
                         <input type="checkbox" id="email" name="contact-method" value="E-mail">
-                        <label for="email" style="width: 6em; padding-right: 1em;padding-left: 0.3em;">E-mail</label>
+                        <label for="email" style="padding-right: 1em;padding-left: 0.3em;">E-mail</label>
 
                         <input type="checkbox" id="text" name="contact-method" value="Text">
                         <label for="text" style="padding-right: 1em;padding-left: 0.3em;">Text</label>
                     </div>
+
                     <div class="consentTerm div-flex">
                         <div class="Checkboxers">
                             <input type="checkbox" id="consentCheckbox" name="agreeToConsent" value="yes">
@@ -287,7 +288,7 @@
                                 I consent to receiving electronic messages from Scale Projects and Fifth Avenue Real
                                 Estate Marketing Ltd. with updates on Scale and other projects that may be of interest
                                 to me. If you wish to stop receiving this information at any time, simply check
-                                unsubscribe at the bottom of any email received or contact live@scale.ca with
+                                unsubscribe at the bottom of any email received or contact homes@scaleliving.ca with
                                 unsubscribe in the subject line.</label>
                         </div>
                         <div class="Checkboxers">
@@ -300,15 +301,11 @@
                                 potential buyers. To learn more about various forms of Realtor representation and the
                                 choices available to you, please <a href="javascript:void(0)">click here.</a></label>
                         </div>
-
-
-
                     </div>
 
                     <div style="display: flex;">
-
                         <button class="form-button g-recaptcha" data-sitekey="6Lc2tRspAAAAAMLNy6B2O23BagKcxv7DkrXMKrd5"
-                            data-callback="onSubmit">Submit</button>
+                            data-callback="onSubmit">SUBMIT</button>
 
                         <div id="check-modal">
                             <!-- <img src="images/CheckGree.png" alt="OK-Check" class="OK-Check" /> -->
@@ -361,7 +358,7 @@
                     LIFE IS REAL, AND SO
                     ARE SCALE PROJECTS<br>
                     <span style="color: white;">
-                        REAL PROJECTS
+                        REAL PROJECTS<br>
                         FOR REAL PEOPLE.
                     </span><br>
                     <button type="button" class="dev-button">
@@ -397,12 +394,14 @@
                 </span>
             </div>
             <div class="right-section11">
-                <p class="mega-text">
-                    In a town where life often went awry,
+                <p>
+                    <b>In</b> a town where life often went awry,
                     Lived Harp and Raj, with dreams to reach the sky.
                     They saw a neighborhood, in need of some flair,
                     A place out of balance, in need of repair.
                     Harp, the dreamer, with visions so grand,
+                </p>
+                <p>
                     Raj, the builder, with tools in his hand.
                     Together they worked, their hearts in full sail,
                     Creating a building, a wonder named “Scale.”
@@ -416,6 +415,8 @@
                     In Scale’s embrace, they found unity.
                     Harp and Raj’s creation, both clever and cool,
                     Inspired the people to break every rule.
+                </p>
+                <p>
                     They learned to find balance in all they would do,
                     Living their best versions, their dreams coming true.
                     The lessons of Harp and of Raj, let them prevail,
@@ -426,8 +427,9 @@
                     Find your own balance, let your spirit prevail.
                     In the story of Harp and of Raj, heed the call,
                     To live your best version, and stand tall.
-                    Goodnight, dear dreamer, under moonlight’s soft veil,
-                    May you find your own balance, and always set sail
+                    <br>
+                    <b>Goodnight, dear dreamer, under moonlight’s soft veil,
+                    May you find your own balance, and always set sail</b>
                 </p>
             </div>
         </section>
@@ -442,7 +444,7 @@
                 </div>
                 <p class="privacy">
                     Copyright &copy; 2023 Scale Projects
-                    <a href="javascript:void(0)" style="margin-left: 10px; border-bottom: solid 1px;"
+                    <a href="javascript:void(0)" style="margin-left: 10px; border-bottom: solid 1px; white-space: nowrap;"
                         onclick="openPrivacyModal2()">Privacy
                         Policy</a>
                 </p>
@@ -525,7 +527,7 @@
                     <span style="color: #ffffff;">
                     </span><br><br>
 
-                    live@scalegroup.ca
+                    homes@scaleliving.ca
                 </p>
                 <a href="#intro"><img src="images/logo2.png" alt="logo2" class="logo2down"></a>
 
