fix: Posicionamento do mapa refactor: Reduz carregamento das imagens fix: Tamanho menu lateral

--- a/public/scali.html
+++ b/public/scali.html
@@ -126,7 +126,7 @@
                     onclick="return showImage(this, 'images/Layers JPEG-PNG/TRANSPORTATION.png');">TRANSPORTATION</a>
             </div>
             <div id="content4">
-                <img id="baseImage" src="images/Layers JPEG-PNG/SCALI_MAP_01_BASE_ICON.png" alt="Base Image">
+                <img id="baseImage" src="images/Layers JPEG-PNG/SCALI_MAP_01_BASE_ICON.jpg" alt="Base Image">
                 <img id="overlayImage" src="images/Layers JPEG-PNG/FULL_MAP.jpg" alt="Overlay Image">
             </div>
         </section>
