refactor: Reduzindo textos

--- a/public/scali.html
+++ b/public/scali.html
@@ -255,29 +255,29 @@
                         <option class="text-input10" value="Family/Friends">Family/Friends</option>
                         <option class="text-input10" value="Other">Other</option>
                     </select>
-                    <div class="div-flex text-input" style="align-items: center; padding-right: 15em;">
+                    <div class="div-flex text-input" style="align-items: center;">
                         <label for="realtorCheckbox"
-                            style="padding-right: 1em;font-weight: bold;font-size: 0.95em;padding-bottom: 0.4em;padding-top: 0.5em;">
+                            style="padding-right: 1em;font-weight: bold;font-size: 75%;padding-bottom: 0.4em;padding-top: 0.5em;">
                             ARE YOU A REALTOR?</label>
-                        <input type="radio" id="yesRealtorCheckbox" name="areYouRealtor" value="yes"
-                            class="radio-check">
-                        <label for="yesRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">YES</label>
-                        <input type="radio" id="noRealtorCheckbox" name="areYouRealtor" value="no" class="radio-check">
-                        <label for="noRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">NO</label>
+                        <input type="radio" id="yesRealtorCheckbox" name="areYouRealtor" value="yes">
+                        <label for="yesRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">Yes</label>
+
+                        <input type="radio" id="noRealtorCheckbox" name="areYouRealtor" value="no">
+                        <label for="noRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">No</label>
                     </div>
 
                     <div class="div-flex text-input">
-                        <label for="contact-method" style="padding-right: 1em; font-weight: bold; font-size: 0.95em; white-space: nowrap;">
+                        <label for="contact-method" style="padding-right: 1em; font-weight: bold; font-size: 75%; white-space: nowrap;">
                             HOW WOULD YOU LIKE TO BE CONTACTED?</label>
 
                         <input type="checkbox" id="checkbox-phone" name="contact-method" value="Phone">
                         <label for="checkbox-phone" style="padding-right: 1em;padding-left: 0.3em;">Phone</label>
 
-                        <input type="checkbox" id="email" name="contact-method" value="E-mail">
-                        <label for="email" style="padding-right: 1em;padding-left: 0.3em;">E-mail</label>
+                        <input type="checkbox" id="checkbox-email" name="contact-method" value="E-mail">
+                        <label for="checkbox-email" style="padding-right: 1em;padding-left: 0.3em;">E-mail</label>
 
-                        <input type="checkbox" id="text" name="contact-method" value="Text">
-                        <label for="text" style="padding-right: 1em;padding-left: 0.3em;">Text</label>
+                        <input type="checkbox" id="checkbox-text" name="contact-method" value="Text">
+                        <label for="checkbox-text" style="padding-right: 1em;padding-left: 0.3em;">Text</label>
                     </div>
 
                     <div class="consentTerm div-flex">
